# ChangeLog for sci-visualization/gnuplot
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gnuplot/ChangeLog,v 1.78 2008/07/31 07:15:22 ulm Exp $

  31 Jul 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Add myself as maintainer.

  04 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> gnuplot-4.2.3-r2.ebuild:
  amd64 stable, bug #224071

  02 Jun 2008; Jeroen Roovers <jer@gentoo.org> gnuplot-4.2.3-r2.ebuild:
  Stable for HPPA (bug #223965).

  01 Jun 2008; nixnut <nixnut@gentoo.org> gnuplot-4.2.3-r2.ebuild:
  Stable on ppc wrt bug 224071

  31 May 2008; Raúl Porcel <armin76@gentoo.org> gnuplot-4.2.3-r2.ebuild:
  alpha/ia64/sparc stable wrt #224071

  29 May 2008; Christian Faulhammer <opfer@gentoo.org>
  gnuplot-4.2.3-r2.ebuild:
  stable x86, bug 224071

  09 May 2008; Ulrich Mueller <ulm@gentoo.org> gnuplot-4.2.3-r2.ebuild:
  Inherit autotools and call eautoreconf, bug 219323 comment 8.

*gnuplot-4.2.3-r2 (09 May 2008)

  09 May 2008; Christian Faulhammer <opfer@gentoo.org>
  files/gnuplot-4.2.3-app-defaults.patch, -gnuplot-4.2.3-r1.ebuild,
  +gnuplot-4.2.3-r2.ebuild:
  reworked patch for X application file by ulm

*gnuplot-4.2.3-r1 (28 Apr 2008)

  28 Apr 2008; Christian Faulhammer <opfer@gentoo.org>
  +files/gnuplot-4.2.3-app-defaults.patch, -gnuplot-4.2.3.ebuild,
  +gnuplot-4.2.3-r1.ebuild:
  Install resource file into non-deprecated location, patch provided by ulm in
  bug 219323

  24 Apr 2008; Christian Faulhammer <opfer@gentoo.org>
  -files/gnuplot-4.0-filled-arrow.patch, -files/gnuplot-4.0-libggi.patch,
  -files/pdflib-6-compat.patch, -files/header-order.patch:
  clean up

*gnuplot-4.2.3 (24 Apr 2008)

  24 Apr 2008; Christian Faulhammer <opfer@gentoo.org>
  +gnuplot-4.2.3.ebuild:
  version bump

  24 Apr 2008; Christian Faulhammer <opfer@gentoo.org>
  gnuplot-4.2.2-r1.ebuild:
  remove all die comments and add virtual/ghostscript for USE=doc, see bug