@@ -7,13 +7,13 @@ AUX gnuplot-4.2.3-app-defaults.patch 1906 RMD160 dab9814a3e7178941fe68373870e8fc
 DIST gnuplot-4.2.2.tar.gz 2832174 RMD160 7364d283718d89c05652d7c25a841154caa2efd8 SHA1 991db8024f04e8cad300804bc2661e358fdcf348 SHA256 756f8a058f2743d0ca739a14bd43cda40d6fd9cc14bb50f4d30d92d538478a91
 DIST gnuplot-4.2.3.tar.gz 2840611 RMD160 b4692db884c9da2f0d160f33f53c3d2aba65f36e SHA1 9f6239ef69ac5a6d68f40dc797f8a0b35b80f491 SHA256 4aae09bf99ab2642308b0042eb18b75bc18ff33969a7431bba60b09cc2f600f4
 EBUILD gnuplot-4.2.2-r1.ebuild 5158 RMD160 442c819f61991a8a8cbdd75580f0e5f104a3eca5 SHA1 2bd01833889569b706829e8135f351753d42765f SHA256 fbde8c23eef98d14346526b9275da2f0c530d4866676a234c29f384d6435c37a
-EBUILD gnuplot-4.2.3-r2.ebuild 5406 RMD160 baf68d9f1c06be72cb0d4c033181588c08ea9a9a SHA1 a76cd0012a4ec1b84a0f3d95e2a447a8a39c4ac2 SHA256 56c98efadd5403eaaeeccf3a645c6b21f28c3269a922f72cf34d5788b68b01f3
-MISC ChangeLog 18357 RMD160 e08aa94f5086d8fd76b83075cccf9377f22376a4 SHA1 a6026a669d47bbd48453f9946634c0cf5bd38e81 SHA256 a933104036af681f2edb7be62d90bed46e1d96b057360df02457a83463546c91
+EBUILD gnuplot-4.2.3-r2.ebuild 5444 RMD160 31531eeb02ba9e6d147b5685b8384d93f5008332 SHA1 f6afeaba34d776b59028a96746065846290e26ae SHA256 18f1a10580816a08a440c47adfa21656fba6c85ed9c46a17ebc5dcb512afe027
+MISC ChangeLog 18483 RMD160 5720b60929ecdbdb4800805792404394de503962 SHA1 80d65a4ca11a0854567b1a09de669396928a3d25 SHA256 9ae29dd2831f79669193d8d8e556956f736095b45d9915a81a3d75d6e0cc365b
 MISC metadata.xml 276 RMD160 101ad3143b6457f9d2668d192b7aac223f3591dd SHA1 ea4db22a1bcd96727956a9903662e7be5af26923 SHA256 6659aef747a907b0953dd240d628c62ed93baafe308c685670584f3e5b16a8ac
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (GNU/Linux)
 
-iEYEARECAAYFAkiRZpgACgkQOeoy/oIi7uxRSgCg09oZQSPW0Wu8cbmc/0ZUn80I
-c+8AnikHMySUV0YZXIpwKpO3ag0/3X+T
-=X526
+iEYEARECAAYFAkiybUUACgkQOeoy/oIi7uzaCwCfei+1UaY9tpNJ6gRV6Mq1LEuT
+zxoAoLtAusPI+/nP1P+XL9s1nfVjGM4C
+=rDZe
 -----END PGP SIGNATURE-----
