@@ -1,6 +1,9 @@
 # ChangeLog for sci-visualization/gnuplot
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gnuplot/ChangeLog,v 1.78 2008/07/31 07:15:22 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gnuplot/ChangeLog,v 1.79 2008/08/25 08:28:32 ulm Exp $
+
+  25 Aug 2008; Ulrich Mueller <ulm@gentoo.org> gnuplot-4.2.3-r2.ebuild:
+  Install TeX files in a fixed location, bug 235395.
 
   31 Jul 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
   Add myself as maintainer.
